<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_club_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/tv_name_club"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_name_club"
            android:textSize="25sp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_country"
            style="@style/TextAppearance.AppCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp"
            android:textColor="@color/colorSubTitle"
            android:layout_marginBottom="8dp"
            tools:text="@string/tv_country"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_club"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/img_arsenal" />

                <LinearLayout
                    style="@style/ContentDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:orientation="vertical"
                    android:layout_centerVertical="true">

                    <TextView
                        android:id="@+id/tv_power"
                        style="@style/ContentDetail"
                        android:text="@string/tv_power"
                        android:gravity="center_horizontal"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_attack"
                        style="@style/ContentDetail"
                        android:text="@string/tv_attack"
                        android:textSize="14sp"/>

                    <LinearLayout
                        style="@style/ContentDetail" >
                        <ProgressBar
                            android:id="@+id/pb_attack"
                            style="@style/ProgressBar"
                            android:progressDrawable="@drawable/progress_bar_attack"
                            tools:progress="82"/>
                        <TextView
                            android:id="@+id/tv_attack_value"
                            style="@style/ProgressBarValue"
                            tools:text="82" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_midfield"
                        style="@style/ContentDetail"
                        android:text="@string/tv_midfield"
                        android:textSize="14sp"/>

                    <LinearLayout
                        style="@style/ContentDetail" >
                        <ProgressBar
                            android:id="@+id/pb_midfield"
                            style="@style/ProgressBar"
                            android:progressDrawable="@drawable/progress_bar_midfield"
                            tools:progress="82"/>
                        <TextView
                            android:id="@+id/tv_midfield_value"
                            style="@style/ProgressBarValue"
                            tools:text="82" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_defence"
                        style="@style/ContentDetail"
                        android:text="@string/tv_defence"
                        android:textSize="14sp"/>

                    <LinearLayout
                        style="@style/ContentDetail" >
                        <ProgressBar
                            android:id="@+id/pb_defence"
                            style="@style/ProgressBar"
                            android:progressDrawable="@drawable/progress_bar_defence"
                            tools:progress="82"/>
                        <TextView
                            android:id="@+id/tv_defence_value"
                            style="@style/ProgressBarValue"
                            tools:text="82" />
                    </LinearLayout>


                </LinearLayout>


            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <!-- League -->
            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_margin="4dp"
                app:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_margin="4dp">

                    <ImageView
                        android:id="@+id/img_league"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_trophy"/>

                    <TextView
                        android:id="@+id/tv_league_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/img_league"
                        android:layout_centerHorizontal="true"
                        android:textSize="16sp"
                        tools:text="1"/>

                    <TextView
                        android:id="@+id/tv_league_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_league_value"
                        android:layout_centerHorizontal="true"
                        android:maxWidth="100dp"
                        tools:text="Primare League"
                        />


                </RelativeLayout>
            </androidx.cardview.widget.CardView>


            <!-- ucl -->
            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_margin="4dp"
                app:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_margin="4dp">

                    <ImageView
                        android:id="@+id/img_ucl"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_champion"/>

                    <TextView
                        android:id="@+id/tv_ucl_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/img_ucl"
                        android:layout_centerHorizontal="true"
                        android:textSize="16sp"
                        tools:text="1"/>

                    <TextView
                        android:id="@+id/tv_ucl_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_ucl_value"
                        android:layout_centerHorizontal="true"
                        android:maxWidth="100dp"
                        android:text="@string/tv_champions"
                        />


                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <!-- eropa -->
            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_margin="4dp"
                app:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_margin="4dp">

                    <ImageView
                        android:id="@+id/img_eropa"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_uefa"/>

                    <TextView
                        android:id="@+id/tv_eropa_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/img_eropa"
                        android:layout_centerHorizontal="true"
                        android:textSize="16sp"
                        tools:text="1"/>

                    <TextView
                        android:id="@+id/tv_eropa_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_eropa_value"
                        android:layout_centerHorizontal="true"
                        android:maxWidth="100dp"
                        android:text="@string/tv_europa"
                        />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_detail"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_detail"
            style="@style/TextContent.Detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            tools:text="@string/tv_detail"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_coach"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@color/colorAccent"
                    android:layout_centerVertical="true" />

                <TextView
                    android:id="@+id/tv_txt_coach"
                    style="@style/TextContent.Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/image_coach"
                    android:text="@string/tv_txt_coach"/>
                <TextView
                    android:id="@+id/tv_coach_name"
                    style="@style/TextContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/image_coach"
                    android:layout_below="@+id/tv_txt_coach"
                    tools:text="name coach"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>